[tool.poetry]
name = "quantum_gaussian_toolbox"
version = "0.1.0"
description = "Wholly unofficial poetry packaging of https://github.com/IgorBrandao42/Quantum-Gaussian-Information-Toolbox"
authors = ["Igor Brandão <igorbrandao@aluno.puc-rio.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"
scipy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
